2002-06-09  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.{cc,h},actorio.cc,readnpcs.cc: Use iflag2 correctly.  If
	0, it means NPC is unused in game (like the extra trappers).

	* conf/Configuration.cc: Not everyone has sstream!
	* usecode/ucxt/src/ucfunc.cc: Same here.

2002-06-08  Max Horn  <max@quendi.de>
	* configure.in: fixed check for SDL_mixer
	* gamemap.cc: #include objiter.cc instead of objiter.h to get template
	  linking right on all compilers (I hope...)
	* objs/objiter.cc: removed template instantiation hack

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* autogen.sh: always include /usr/local/share/aclocal if it exists

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/Makefile.am: add estudio/new files to dist/data
	* exult.spec.in: add estudio/new files to studio rpm

2002-06-08  Darke <darkepaw@users.sourceforge.net>
	* usecode/ucxt/src/ucfunc.cc: Removed the 'fix' we needed for
	strstreams.
	
	* usecode/ucxt/*: Updated a few things to avoid name collisions between
	ucxt/include/opcodes.h and usecode/opcodes.h.

2002-06-07  Jeff Freedman  <jeff@amy.nerble.net>

	* ucinternal.cc:  Fixed a couple compile errors if UC debugging
	isn't enabled.
	* Audio/*:  A couple headers needed to be included.

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* */Makefile.am: cleaning up distro stuff
	* exult.spec.in: fixed
	* usecode/ucxt/head2data.cc: removed utils.cc dependency
	* version.cc: added USECODE_DEBUGGER symbol to version output

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: typo

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* *: merged audiotest branch back into main tree:

> 2002-06-06 Simon Quinn <email@simonquinn.co.uk>
>	* Recorded Exult title music in OGG pack and implemented in code
>
> 2002-06-03 Simon Quinn <email@simonquinn.co.uk>
>	* Play different SFX track at night and crickets